--- a/portal/templates/gil/david_andrew_story.html
+++ b/portal/templates/gil/david_andrew_story.html
@@ -1,5 +1,5 @@
 {% extends "gil/lived_experience_base.html" %}
-{% block title %}{{_("TrueNTH Lived Experience - David and Andrew Perez Story")}}{% endblock %}
+{% block title %}{{super()}} {{_("Lived Experience - David and Andrew Perez Story")}}{% endblock %}
 {% block head %}{{super()}}{% endblock %}
 {% block main %}
     <main class="main main--story">
