--- a/portal/templates/gil/exercise-and-diet.html
+++ b/portal/templates/gil/exercise-and-diet.html
@@ -1,5 +1,5 @@
 {% extends "gil/base.html" %}
-{% block title %}{{_("TrueNTH Exercise and Diet")}}{% endblock %}
+{% block title %}{{super()}} {{_("Exercise and Diet")}}{% endblock %}
 {% block head %}{{super()}}{% endblock %}
 {% block main %}
     <main class="main">
