--- a/portal/templates/gil/contact.html
+++ b/portal/templates/gil/contact.html
@@ -1,5 +1,5 @@
 {% extends "gil/base.html" %}
-{% block title %}{{_("Contact TrueNTH")}}{% endblock %}
+{% block title %}{{_("Contact")}} {{super()}}{% endblock %}
 {% block head %}{{super()}}{% endblock %}
 {% block main %}
     <main class="main">
@@ -11,7 +11,7 @@
                 <figure></figure><span>{{_("Menu")}}</span>
             </a>
           </div>
-          <a class="logo" href="{{PORTAL}}/"></a>
+          <a class="logo" href="/"></a>
           {% if not user %}
             <div class="header__meta"><a href="#" class="menu button button--small button--white" data-toggle="modal" data-target="#modal-login">{{_("Log In")}}</a><a href="#" class="menu button button--small button--white" data-toggle="modal" data-target="#modal-register">{{_("Join Us")}}</a></div>
           {% endif %}
