--- a/portal/static/css/portal.css
+++ b/portal/static/css/portal.css
@@ -1890,6 +1890,7 @@ table.profile-audit-log TH,
 }
 #biopsyDateContainer {
   display: none;
+  min-height: 4.5em;
 }
 #biopsyDateContainer label {
   margin-right: 0.2em;
