--- a/portal/static/less/eproms.less
+++ b/portal/static/less/eproms.less
@@ -749,6 +749,9 @@ div.right-panel {
       left: -3%;
   }
 }
+#biopsyDateContainer {
+  min-height: 4.5em;
+}
 #adminTable {
   min-height: 280px;
   transition: all 0.5s ease-in;
