--- a/portal/static/less/portal.less
+++ b/portal/static/less/portal.less
@@ -2025,6 +2025,7 @@ div.noOrg-container {
 }
 #biopsyDateContainer {
   display: none;
+  min-height: 4.5em;
 }
 #biopsyDateContainer label {
   margin-right: 0.2em;
@@ -2037,7 +2038,6 @@ div.biopsy-option:last-of-type{
   max-width: 100%;
   display: inline-block;
 }
-
 .modal-dialog {
   border-radius: 0;
 }
